<resources>
    <string name="app_name">RetrofitKotlinDeferred</string>
    <string name="img">Image</string>
    <string name="headline">Headline</string>
    <string name="altText">Alternate Text</string>
    <string name="pageText">Page Text</string>
    <string name="errorUnknownNoNewData">Unknown error while loading new data</string>
    <string name="errorUnknownNoData">Unknown error while loading data from database</string>
    <string name="errorNetwork">Can\'t load new data from the Internet. Check your network connection.</string>
    <string name="reload">Reload</string>
    <string name="noDataYet">No data yet</string>
    <string name="listImgDesc">Image of one item from whole list</string>
    <string name="pageImgDesc">Image of the item on the page</string>
    <string name="noDataYetDesc">Image for case when we have no news</string>
</resources>
