<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="8dp">

    <io.navendra.retrofitkotlindeferred.customViews.NewsItemCustomLayout
        android:id="@+id/newsItemCustomLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:columns="2"
        app:spacing="1dp">

        <io.navendra.retrofitkotlindeferred.customViews.NewsItemCustomImage
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_left="0"
            app:layout_top="0"
            app:layout_cellsWidth="1"
            app:layout_cellsHeight="2"
            tools:contentDescription="@string/img"
            android:scaleType="centerCrop"
            android:contentDescription="@string/listImgDesc"
            app:attrAnglesNumber='6' />

        <TextView
            android:id="@+id/altText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_left="1"
            app:layout_top="0"
            app:layout_cellsWidth="1"
            app:layout_cellsHeight="1"
            tools:text="@string/altText"
            android:textColor="@android:color/holo_purple"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_left="1"
            app:layout_top="1"
            app:layout_cellsWidth="1"
            app:layout_cellsHeight="1"
            tools:text="@string/headline"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

    </io.navendra.retrofitkotlindeferred.customViews.NewsItemCustomLayout>

</androidx.cardview.widget.CardView>